[package]
name = "bspc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = [ "derive" ] }
strum_macros = "0.24"
serde_json = "1.0.94"
strum = { version = "0.24", features = [ "derive" ] }
