[package]
name = "bspc-rs"
version = "0.1.1"
authors = ["Andrey Vladimirov"]
description = "Implementation of bspc in Rust"
keywords = ["bspwm", "bspc", "windowmanager", "ipc"]

homepage = "https://github.com/andreykaere/bspc-rs"
repository = "https://github.com/andreykaere/bspc-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
strum_macros = "0.24"
serde_json = "1.0.94"
strum = { version = "0.24", features = ["derive"] }

[dev-dependencies]
doc-comment = "0.3.3"

[[example]]
name = "setupborders"

